# fawx

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  Cargo.toml  DOCTRINE.md  ENGINEERING.md  LICENSE  PROPOSAL_GATE_SPEC.md  README.md  TASTE.md  citros-ui-mocks.html  h1-pr5-tool-gating-pressure-test.md  install.sh  justfile
crates/ct-cli/: Cargo.toml
crates/ct-cli/src/: confirmation.rs  main.rs
crates/ct-cli/src/commands/: audit.rs  config.rs  eval_harness.rs  mod.rs  skills.rs
crates/ct-cli/tests/: android_build_test.rs
crates/ct-llm/: Cargo.toml
crates/ct-llm/src/: lib.rs  local.rs  router.rs  routing.rs
crates/nv-agent/: Cargo.toml
crates/nv-agent/src/: history.rs  lib.rs  plan_builder.rs  retry.rs  skill_tools.rs  tools.rs
crates/nv-agent/src/claude/: client.rs  config.rs  error.rs  types.rs
crates/nv-agent/src/intent/: classifier.rs  metrics.rs  mod.rs  parser.rs  prompts.rs  tests.rs
crates/nv-cli/: Cargo.toml
crates/nv-cli/src/: confirmation.rs  main.rs
crates/nv-cli/src/commands/: audit.rs  chat.rs  config.rs  doctor.rs  mod.rs  skills.rs
crates/nv-llm/: Cargo.toml
crates/nv-llm/src/: config.rs  fallback.rs  lib.rs  local.rs  router.rs  routing.rs
crates/nv-security/: Cargo.toml
crates/nv-security/src/: lib.rs
crates/nv-security/src/audit/: log.rs  mod.rs  types.rs
crates/nv-security/src/policy/: engine.rs  mod.rs  rate_limit.rs  signing.rs  tests.rs  types.rs  util.rs
crates/nv-security/tests/: e2e_integration.rs
crates/nv-skills/: Cargo.toml
crates/nv-skills/src/: cache.rs  capabilities.rs  host_api.rs  lib.rs  loader.rs  manifest.rs  registry.rs  runtime.rs  signing.rs  storage.rs
crates/nv-storage/: Cargo.toml
crates/nv-storage/src/: async_encrypted.rs  async_store.rs  conversation.rs  credentials.rs  crypto.rs  encrypted_store.rs  key_derivation.rs  lib.rs  preferences.rs  store.rs
crates/nv-storage/tests/: integration_test.rs
engine/crates/ct-agent/: Cargo.toml
engine/crates/ct-agent/src/: plan_builder.rs  tools.rs
engine/crates/ct-cli/: Cargo.toml
engine/crates/ct-cli/src/: main.rs  tui.rs
engine/crates/ct-cli/tests/: android_build_test.rs
engine/crates/ct-kernel/: Cargo.toml
engine/crates/ct-kernel/src/: act.rs  auth.rs  budget.rs  context_manager.rs  decide.rs  lib.rs  loop_engine.rs  oauth.rs  perceive.rs  permissions.rs  reason.rs  types.rs
engine/crates/ct-llm/: Cargo.toml
engine/crates/ct-llm/src/: anthropic.rs  config.rs  fallback.rs  lib.rs  model_catalog.rs  openai.rs  openai_responses.rs  provider.rs  router.rs  types.rs
engine/crates/ct-loadable/: Cargo.toml
engine/crates/ct-loadable/src/: ab_slots.rs  config.rs  lib.rs  skills.rs  strategies.rs  templates.rs
engine/crates/ct-skills/: Cargo.toml
engine/crates/ct-skills/src/: capabilities.rs  manifest.rs  runtime.rs
engine/crates/fx-agent/: Cargo.toml
engine/crates/fx-agent/src/: auth.rs  lib.rs  plan_builder.rs  skill_tools.rs  tools.rs
engine/crates/fx-analysis/: Cargo.toml
engine/crates/fx-analysis/src/: engine.rs  findings.rs  lib.rs
engine/crates/fx-api/: Cargo.toml
engine/crates/fx-api/src/: audit.rs  auth_store.rs  bundle.rs  config_redaction.rs  devices.rs  engine.rs  error.rs  experiment_bridge.rs  experiment_registry.rs  launchagent.rs  lib.rs  listener.rs  middleware.rs  pairing.rs  router.rs  server_runtime.rs  skill_manifests.rs  sse.rs  state.rs  tailscale.rs  test_support.rs  tests.rs  time_util.rs  token.rs  types.rs
engine/crates/fx-auth/: Cargo.toml
engine/crates/fx-auth/src/: auth.rs  credential_store.rs  github.rs  lib.rs  oauth.rs  token_broker.rs
engine/crates/fx-bus/: Cargo.toml
engine/crates/fx-bus/src/: envelope.rs  lib.rs  router.rs  store.rs  tests.rs
engine/crates/fx-canary/: Cargo.toml
engine/crates/fx-canary/src/: health.rs  lib.rs  monitor.rs  time.rs  trigger.rs  window.rs
engine/crates/fx-channel-telegram/: Cargo.toml
engine/crates/fx-channel-telegram/src/: lib.rs  progress.rs
engine/crates/fx-cli/: Cargo.toml  build.rs
engine/crates/fx-cli/src/: analysis.rs  ansi.rs  auth_store.rs  config.rs  config_bridge.rs  config_redaction.rs  confirmation.rs  context.rs  conversation_store.rs  fleet_endpoints.rs  git_skill.rs  headless.rs  headless_http.rs  helpers.rs  http_serve.rs  json_memory.rs  lib.rs  main.rs  markdown.rs  persisted_memory.rs  prompts.rs  proposal_review.rs  repo_root.rs  restart.rs  scroll_region.rs  signal_store.rs  skill_bridge.rs  startup.rs  tools.rs  tui.rs  ui.rs
engine/crates/fx-cli/tests/: android_build_test.rs
engine/crates/fx-cloud-gpu/: Cargo.toml
engine/crates/fx-cloud-gpu/src/: lib.rs  provider.rs  skill.rs
engine/crates/fx-config/: Cargo.toml
engine/crates/fx-config/src/: defaults.rs  display.rs  env.rs  lib.rs  manager.rs  presets.rs  provider_model_cache.rs  test_support.rs  toml_io.rs  types.rs  validation.rs
engine/crates/fx-consensus/: Cargo.toml
engine/crates/fx-consensus/src/: cargo_workspace.rs  chain.rs  error.rs  evaluator.rs  experiment_cli.rs  generator.rs  lib.rs  llm_source.rs  orchestrator.rs  progress_format.rs  protocol.rs  remote_workspace.rs  response_parser.rs  runner.rs  scoring.rs  subagent_source.rs  test_fixtures.rs  tournament.rs  training.rs  types.rs
engine/crates/fx-consensus/tests/: integration.rs  protocol_tests.rs  runner_progress.rs
engine/crates/fx-conversation/: Cargo.toml
engine/crates/fx-conversation/src/: lib.rs
engine/crates/fx-core/: Cargo.toml
engine/crates/fx-core/src/: channel.rs  command_text.rs  config.rs  error.rs  event.rs  events.rs  kernel_manifest.rs  lib.rs  memory.rs  message.rs  path.rs  runtime_info.rs  self_modify.rs  signals.rs  types.rs  (+1 more)
tui/: BUILD.bazel  Cargo.toml
tui/src/: app.rs  credential_reader.rs  embedded_backend.rs  experiment_panel.rs  fawx_backend.rs  lib.rs  local_auth.rs  main.rs  markdown_render.rs  markdown_render_tests.rs  wrapping.rs
tui/src/app/: transcript_render.rs
tui/src/render/: line_utils.rs
tui/src/snapshots/: fawx_tui__markdown_render__markdown_render_tests__markdown_render_complex_snapshot.snap
(+1714 files in other folders)
