load("//:defs.bzl", "codex_rust_crate")

codex_rust_crate(
    name = "tui",
    crate_name = "fawx_tui",
    compile_data = glob(
        include = ["**"],
        exclude = [
            "**/* *",
            "BUILD.bazel",
            "Cargo.toml",
        ],
        allow_empty = True,
    ),
)
