[package]
name = "fawx-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
default-run = "fawx-tui"

[[bin]]
name = "fawx-tui"
path = "src/main.rs"

[lib]
name = "fawx_tui"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
crossterm = { workspace = true, features = ["bracketed-paste", "event-stream"] }
fx-auth = { workspace = true }
fx-storage = { workspace = true }
futures = { workspace = true }
pulldown-cmark = "0.10"
ratatui = { workspace = true }
regex-lite = "0.1"
reqwest = { workspace = true, features = ["json"] }
ring = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sparx = { git = "https://github.com/abbudjoe/sparx.git" }
textwrap = "0.16"
tokio = { workspace = true }
tracing = { workspace = true }
unicode-width = "0.2"
url = "2"

[dev-dependencies]
insta = "1"
itertools = "0.13"
pretty_assertions = "1"
