[package]
name = "ct-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "citros"
path = "src/main.rs"

[dependencies]
ct-core.workspace = true
ct-security.workspace = true
ct-skills = { path = "../ct-skills" }
ct-storage.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
crossterm.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = "6.0"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.14"
