[package]
name = "ct-llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
llama-cpp = ["llama-cpp-sys/llama-cpp"]  # Enable llama.cpp integration

[dependencies]
ct-core.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
thiserror.workspace = true
llama-cpp-sys = { path = "../../ffi/llama-cpp-sys", optional = true }
