[package]
name = "nv-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
nv-core.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
ring = { workspace = true }
uuid = { version = "1.11", features = ["v4"] }
hex = "0.4"

[dev-dependencies]
tempfile = "3.14"
