[package]
name = "ct-kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Citros kernel — loop orchestration, policy engine, permissions, budget enforcement, verification, rollback, watchdog. Immutable at runtime."

[dependencies]
ct-core = { workspace = true }
ct-storage = { workspace = true }
ct-loadable = { workspace = true }
ct-llm = { path = "../ct-llm" }

async-trait.workspace = true
base64 = "0.22"
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
