[package]
name = "ct-llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
llama-cpp = ["llama-cpp-sys/llama-cpp"]  # Enable llama.cpp integration

[dependencies]
async-trait.workspace = true
bytes = "1"
ct-core.workspace = true
futures.workspace = true
llama-cpp-sys = { path = "../llama-cpp-sys", optional = true }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
