[package]
name = "ct-skills"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ct-core.workspace = true
ct-security = { workspace = true, optional = true }
tokio.workspace = true
tracing.workspace = true
wasmtime.workspace = true
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
semver.workspace = true
dirs = "6.0"
hex = "0.4"

[features]
default = []
audit = ["ct-security"]

[dev-dependencies]
tempfile = "3.14"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
