[package]
name = "fx-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
fx-core.workspace = true
fx-skills = { path = "../fx-skills" }
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest.workspace = true
async-trait.workspace = true
futures.workspace = true
