[package]
name = "fx-analysis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Signal analysis engine and finding types for Fawx."

[dependencies]
fx-core.workspace = true
fx-llm = { path = "../fx-llm" }
fx-memory.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
async-trait.workspace = true
tempfile = "3.14"
tokio.workspace = true
