[package]
name = "fx-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = "0.8"
base64 = "0.22"
futures.workspace = true
fx-channel-telegram = { path = "../fx-channel-telegram" }
fx-channel-webhook = { path = "../fx-channel-webhook" }
fx-config.workspace = true
fx-core.workspace = true
fx-fleet.workspace = true
fx-kernel.workspace = true
fx-llm.workspace = true
fx-tools.workspace = true
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
fx-cli = { path = "../fx-cli", default-features = false }
fx-subagent = { workspace = true, features = ["test-support"] }
http-body-util = "0.1"
hyper = "1.0"
reqwest.workspace = true
tempfile = "3.14"
tower = { version = "0.5", features = ["util"] }
tracing-subscriber.workspace = true
