[package]
name = "fx-channel-telegram"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
fx-core = { path = "../fx-core" }
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
