[package]
name = "fx-cloud-gpu"
version = "0.1.0"
edition = "2021"

authors.workspace = true
license.workspace = true

description = "Cloud GPU provider trait and skill adapters for Fawx."

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
fx-kernel = { path = "../fx-kernel" }
fx-loadable = { path = "../fx-loadable" }
fx-llm = { path = "../fx-llm" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
