[package]
name = "fx-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dirs = "6.0"
serde = { workspace = true }
toml = { workspace = true }
toml_edit = "0.22"
glob = "0.3"
tracing.workspace = true

[dev-dependencies]
tempfile = "3.14"
